added share functionality, also added companion object to fix issues with globalScope

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
+            android:layout_marginTop="5dp"
             android:layout_margin="3dp"
             >
 
@@ -112,6 +113,12 @@
                     android:layout_gravity="right"
                     />
             </LinearLayout>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Share"
+                android:id="@+id/button_share"
+                />
         </LinearLayout>
     </ScrollView>
 
