--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -29,7 +29,7 @@
             android:layout_marginTop="10sp"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Your favourite commics application"
+            android:text="Your favourite comics application"
             android:textColor="@color/black"
             android:textSize="40sp"
             android:textStyle="bold" />
